--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,11 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit bootstrap="./tests/bootstrap.php" colors="true">
-    <testsuites>
-        <testsuite name="hevents-client">
-            <directory suffix="Test.php">tests/</directory>
-        </testsuite>
-    </testsuites>
-
     <filter>
         <whitelist>
             <directory suffix=".php">src</directory>
@@ -14,4 +8,16 @@
             </exclude>
         </whitelist>
     </filter>
+    <logging>
+        <log type="tap" target="tests/build/report.tap"/>
+        <log type="junit" target="tests/build/report.junit.xml"/>
+        <log type="coverage-html" target="tests/build/coverage" charset="UTF-8" yui="true" highlight="true"/>
+        <log type="coverage-text" target="tests/build/coverage.txt"/>
+        <log type="coverage-clover" target="tests/build/logs/clover.xml"/>
+    </logging>
+    <testsuites>
+        <testsuite name="hevents-client">
+            <directory suffix="Test.php">tests/</directory>
+        </testsuite>
+    </testsuites>
 </phpunit>
