--- a/composer.json
+++ b/composer.json
@@ -11,12 +11,11 @@
         }
     ],
     "require": {
-        "php": ">=7.1",
+        "php": ">=5.6",
         "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
-        "ext-curl": "*",
-        "phpunit/phpunit": "^4.8.35|^5.7|^6.4|^7.5"
+        "phpunit/phpunit": "^5.0"
     },
     "autoload": {
         "psr-4": {
