--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
     ],
     "require": {
         "php": ">=7.1",
-        "guzzlehttp/guzzle": "6.*",
+        "guzzlehttp/guzzle": "^6.5",
         "ext-json": "*"
     },
     "require-dev": {
-        "phpunit/phpunit": "8.*"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
